style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --myDarkerGrey: #231f35;
  --myDarkGrey: #1d1f29;
  --myTextBackground: #20222b;
}

html {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 18px;
  color: white;
}

body {
  background-color: var(--myDarkerGrey);
}

main {
  display: grid;
  grid-template-columns: 5vw 15vw 1fr 15vw 5vw;
  grid-template-rows: auto;
}

footer {
  padding: 1rem 0;
  margin: 3rem 0 0 0;
  box-shadow: -1px -1px 10px black;
  background-color: var(--myDarkGrey);
}

header {
  background-color: var(--myDarkGrey);
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 1px 1px 10px black;
  padding: 0.5rem 5vw;
}

header h1 a {
  text-decoration: none;
  color: white;
}

.navlist {
  list-style: none;
}

.navlist li {
  display: inline-block;
  padding: 0.2em 0.6em;
}

.navlist li a {
  text-decoration: none;
  padding: 0.2em;
  color: white;
}

.navlist li a:hover {
  color: rgb(177, 177, 177);
  border-bottom: 5px green solid;
}

.currentPage a {
  border-bottom: 5px green solid;
}

.textP {
  grid-column: 3/4;
  margin: 5vh 0;
  background-color: var(--myTextBackground);
  border-radius: 5px;
  box-shadow: 2px 2px 5px 2px black;
  padding: 1em;
}

.character_gallery {
  grid-column: 3/4;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: grey;
}

.character_card {
  margin: 0.8em;
  padding: 0.2em;
}

.character_name {
  text-align: center;
  font-size: 0.8rem;
}

.character_card p a {
  color: white;
  text-decoration: none;
  padding: 0.4em;
}

.gallery_img {
  width: 100px;
  background: var(--myDarkGrey);
}

.gallery_img img {
  width: 100%;
}

.wikiLayout {
  display: grid;
  grid-template-columns: 15vw 1fr 1fr 1fr 15vw;
}

.character_article_h2 {
  grid-column: 2/4;
  margin: 10vh 0 0;
}

.fact_box {
  grid-column: 4;
  grid-row: 2/3;
  margin: 0vh 0 0 2vw;
  padding: 0.5rem;
  background-color: rgba(87, 104, 109, 0.507);
  border-radius: 10px;
}

.fact_box h3 {
  text-align: center;
  margin-bottom: 1vh;
}

.factbox_imgDiv {
  width: 200px;
  margin: 0 auto;
}

.factbox_img {
  width: 100%;
}

.factbox_ul {
  text-align: center;
  list-style: none;
  font-size: 0.9rem;
}

.factbox_ul li {
  margin: 0 0 1.5vh;
}

.row2 {
  grid-row: 2/3;
  grid-column: 2/4;
}

#lore_text, #apperances_text, #personality_text {
  grid-column: 2/5;
}

.character_article h3 {
  margin: 2vh 0 0;
}

.character_article p {
  grid-column: 2/4;
}

.tableContent {
  width: 18vw;
  margin: 10vh 0 0;
  grid-row: 2/3;
}

.tableContent ul {
  list-style: none;
  padding: 0.5em;
  border: 1px solid white;
  background-color: rgba(87, 104, 109, 0.507);
}

.tableContent ul li {
  margin: 1vh 0 0;
  padding: 0.2rem;
}

.tableContent ul li a {
  color: white;
  text-decoration: none;
  font-size: 0.8rem;
  padding: 0.2em 1em;
}

@media only screen and (max-width: 760px) {
  .wikiLayout {
    display: flex;
    flex-direction: column;
  }

  .character_article, .tableContent {
    margin: 0 5vw;
  }

  .fact_box {
    width: 45vw;
    margin: 0 auto;
    padding: 0.3rem;
    background-color: rgba(87, 104, 109, 0.507);
    border-radius: 10px;
  }

  .tableContent {
    width: 30vw;
    margin: 5vh 0 2.5vh 8vw;
    grid-row: 2/3;
  }

  .character_article_h2 {
    margin: 10vh auto 2.5vh auto;
  }

  header {
    flex-direction: column;
  }
}

@media only screen and (max-width: 480px) {
  .fact_box {
    width: 50vw;
  }
  .factbox_imgDiv {
    width: 150px;
  }

  .tableContent {
    width: 35vw;
  }
}

@media only screen and (max-width: 340px) {
  .fact_box {
    width: 65vw;
  }

  .tableContent {
    width: 45vw;
  }
}

